Destription details added and compute cluster name changed
Added more details to descriptions in order to help the reader.
Changed the compute cluster name into the YML files in order to match my cluster.

--- a/pipelines-hyperdrive-step/conda.yml
+++ b/pipelines-hyperdrive-step/conda.yml
@@ -4,6 +4,7 @@ channels:
   - defaults
 dependencies:
   - python=3.6.2
+  - pip<20.3 # https://stackoverflow.com/questions/65112585/pip-installation-stuck-in-infinite-loop-if-unresolvable-conflicts-in-dependencie
   - pip:
     - azureml-defaults
     - azureml-sdk
