--- a/pipelines-single-training-step/runconfig.yml
+++ b/pipelines-single-training-step/runconfig.yml
@@ -1,6 +1,6 @@
 script: train.py
 arguments: [] # This is set in our pipeline definition script
-target: cpu-cluster
+target: cluster
 framework: Python
 communicator: None
 nodeCount: 1
